# ruz-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: main.py
app/daily_timer/: __init__.py  timer.py
app/db/: db.py
app/ruzbot/: __init__.py  commands.py  handlers.py  markups.py  ruzbot.py
app/ruzparser/: __init__.py  ruzparser.py
app/utils/: __init__.py  daters.py  formatters.py  utils.py
db/: __init__.py  db.py
ruzbot/: __init__.py  ruzbot.py
ruzparser/: __init__.py  ruzparser.py
src/ruzbot/: __main__.py  bot.py  cache.py  callbacks.py  commands.py  deathnote.py  main.py  markups.py  search_handlers.py  settings.py  utils.py
tests/: test_group_schedule_cache.py
utils/: __init__.py  formatters.py  user.py  utils.py
